# Follow_me_ModalAI-m500

./: README.md
human_tracking/: CMakeLists.txt  package.xml
human_tracking/launch/: follower.launch
human_tracking/msg/: AiDetection.msg
human_tracking/param/: px4_config.yaml  px4_pluginlists.yaml
human_tracking/src/: follower.cpp  view.cpp
